--- a/x360ce.App.Beta/Controls/OptionsRemoteControllerControl.xaml
+++ b/x360ce.App.Beta/Controls/OptionsRemoteControllerControl.xaml
@@ -51,13 +51,9 @@
                 Grid.Column="0"
                 Content="UDP Server Port" />
             <JcControls:NumericUpDown
-                x:Name="RemotePortNumericUpDown"
+                Name="RemotePortNumericUpDown"
                 Grid.Row="2"
                 Grid.Column="1"
-                MinWidth="75"
-                Margin="4,2,4,2"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Center"
                 Maximum="49151"
                 Minimum="1024"
                 Value="26010" />
